--- a/schemata/app.yml
+++ b/schemata/app.yml
@@ -10,18 +10,32 @@ definitions:
   id:
     description: unique identifier of app
     readOnly: true
-    format: uuid
     type:
-    - string
+    - integer
   name:
     description: unique name of app
     readOnly: true
     type:
     - string
+    "pattern": "^(\\([0-9]{3}\\))?[0-9]{3}-[0-9]{4}$"
   identity:
     anyOf:
     - "$ref": "/schemata/app#/definitions/id"
     - "$ref": "/schemata/app#/definitions/name"
+  description:
+    description: discription of app
+    type: string
+    maxLength: 140
+  user:
+    description: create user of app
+    type: object
+    properties:
+      id:
+        description: unique identifier of user
+        type: integer
+      name:
+        description: name of user
+        type: string
   created_at:
     description: when app was created
     format: date-time
@@ -43,12 +57,12 @@ links:
     - object
   title: Create
 - description: Delete an existing app.
-  href: "/apps/{(%2Fschemata%2Fapp%23%2Fdefinitions%2Fidentity)}"
+  href: "/apps/{(%2Fschemata%2Fapp%23%2Fdefinitions%2Fid)}"
   method: DELETE
   rel: destroy
   title: Delete
 - description: Info for existing app.
-  href: "/apps/{(%2Fschemata%2Fapp%23%2Fdefinitions%2Fidentity)}"
+  href: "/apps/{(%2Fschemata%2Fapp%23%2Fdefinitions%2Fid)}"
   method: GET
   rel: self
   title: Info
@@ -58,7 +72,7 @@ links:
   rel: instances
   title: List
 - description: Update an existing app.
-  href: "/apps/{(%2Fschemata%2Fapp%23%2Fdefinitions%2Fidentity)}"
+  href: "/apps/{(%2Fschemata%2Fapp%23%2Fdefinitions%2Fid)}"
   method: PATCH
   rel: update
   schema:
@@ -69,10 +83,14 @@ links:
 properties:
   created_at:
     "$ref": "/schemata/app#/definitions/created_at"
+  description:
+    "$ref": "/schemata/app#/definitions/description"
   id:
     "$ref": "/schemata/app#/definitions/id"
   name:
     "$ref": "/schemata/app#/definitions/name"
+  user:
+    "$ref": "/schemata/app#/definitions/user"
   updated_at:
     "$ref": "/schemata/app#/definitions/updated_at"
 id: schemata/app
