--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ web:
   build: .
   command: bundle exec rails s -p 3000 -b '0.0.0.0'
   volumes:
-    - .:/myapp
+    - .:/usr/src/app/
   ports:
     - "3000:3000"
   links:
