--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,8 @@ machine:
   environment:
     PATH: $HOME/.terraform:$PATH
     TERRAFORM_VERSION: 0.6.12
+  ruby:
+    version: 2.2.3
 dependencies:
   cache_directories:
     - ~/.terraform
