fix terraform url

--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 machine:
   environment:
     PATH: $HOME/.terraform:$PATH
-    TERRAFORM_VERSION: 0.6.12
+    TERRAFORM_VERSION: 0.6.13
   ruby:
     version: 2.2.3
 dependencies:
@@ -12,7 +12,7 @@ dependencies:
       mkdir -p $HOME/.terraform
       if [ -z "$(ls -A $HOME/.terraform)" ]; then
         cd $HOME/.terraform
-        curl -LO https://dl.bintray.com/mitchellh/terraform/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+        curl -LO https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
         unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip
         rm terraform_${TERRAFORM_VERSION}_linux_amd64.zip
       fi
