--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,7 @@ machine:
   environment:
     PATH: $HOME/.terraform:$PATH
     TERRAFORM_VERSION: 0.6.13
+    AWS_DEFAULT_REGION: ap-northeast-1
   ruby:
     version: 2.2.3
 dependencies:
