--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,6 @@ jobs:
       - store_test_results:
           path: /tmp/test-results
 workflows:
-  build-workflow:
+  build_and_test:
     jobs:
       - build
